Add recipe and ingredients to page

--- a/recipes/cheesysoup.html
+++ b/recipes/cheesysoup.html
@@ -5,6 +5,40 @@
     <title>Cheesy Soup</title>
     <body>
       <h1>Cheesy Soup with Bacon</h1>
+        <img src="../imgs/soup-photo.jpg" alt="photo of bowl with creamy soup and spoon in it">
+      <h2>Description</h2>
+        <p>
+          This is a deliciously creamy soup that is sure to please, especially during the 
+          winter months, when comfort food is calling.
+        </p>
+        <p>With a cheesey potato taste, accented by scallions and bacon, this soup is a sure winner
+          with everyone, from kids to adults.  Easy to prepare, it will only take you a half hour to 
+          make this delicious soup, and leftovers (if there are any) will stay fresh in the fridge for 
+          up to two weeks.  Enjoy!
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+          <li>1 package of frozen hash browns</li>
+          <li>2 cups cooked bacon</li>
+          <li>1/2 cup diced onion</li>
+          <li>4 cups chicken broth</li>
+          <li>salt and pepper to taste</li>
+          <li>8 oz. cheddar cheese</li>
+          <li>2 tablespoons chopped green onions</li>
+        </ul>
+      <h3>How to Make</h3>
+      <ol>
+        <li>Combine hash browns, bacon, onion, chicken broth, salt, pepper in a slow cooker.  Stir
+          well, and place lid on pot or slow cooker.</li>
+        <li>Cook on low heat, until onion is soft, usually for 2 hours</li>
+        <li>Mix in cheddar cheese and stir until melted and combined.</li>
+        <li>Cover and cook for additional 30 minutes.</li>
+        <li>Serve topped with green onions as garnish.</li>
+
+
+      </ol>
+
+
     </body>
   </head>
 </html>
