Add chef photo and retitle main heading

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Odin Recipes Project</title>
   </head>
 <body>
-  <h1>Odin Recipes</h1>
+  <h1>Odin Recipes For My First Odin Project</h1>
+  <img src="../odin-recipes/imgs/chefphoto.jpeg" alt="Male chef in chef's hat smiling in kitchen">
+  <br>
   <a href="recipes/cheesysoup.html">Cheesy Soup with Bacon</a>
   <br>
   <a href="recipes/asianbeef.html">Asian Style Beef</a>
